# test

./: .gitignore  README.md  pyproject.toml
home11_1/: number_1.py  number_2.py  number_3.py  number_4.py  nums.txt  order.csv
home11_2/: nember_10.py  number_4.py  number_5.py  number_8.py
home12_1/: filter_transactions.json  number_11.py  number_13.py  number_15.py  number_5.py  number_7.py  out.json  weather.json
home12_2/: log.txt  number_11.py
src/: main.py  sss.py
tests/: tests_number_8.py
