[tool.poetry]
name = "sss"
version = "0.1.0"
description = ""
authors = ["Konstantin Borodaev <igorektroickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'


[tool.isort]
line_length = 119


[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''